[gd_scene load_steps=11 format=3 uid="uid://dkwhb1psqv167"]

[ext_resource type="Texture2D" uid="uid://wj10ixtrxqlm" path="res://assets/player/heli/heli-Sheet.png" id="1_7dqjs"]
[ext_resource type="Script" path="res://scenes/player/helipod/helipod.gd" id="1_7wsn7"]
[ext_resource type="PackedScene" uid="uid://dtg7dr1jl4ced" path="res://utils/components/velocity_component.tscn" id="3_51yha"]
[ext_resource type="PackedScene" uid="uid://dw5fdg8s00p7i" path="res://utils/state_machine.tscn" id="3_jr0lj"]
[ext_resource type="Script" path="res://scenes/player/helipod/idle.gd" id="4_7yo7l"]
[ext_resource type="Script" path="res://scenes/player/helipod/move.gd" id="5_fh3jp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w7t21"]
radius = 8.0

[sub_resource type="Animation" id="Animation_bkn3n"]
resource_name = "fly"
length = 0.04
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_jso80"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ydhfc"]
_data = {
"RESET": SubResource("Animation_jso80"),
"fly": SubResource("Animation_bkn3n")
}

[node name="Helipod" type="CharacterBody2D"]
z_index = 1
collision_layer = 0
script = ExtResource("1_7wsn7")

[node name="PhysicsShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_w7t21")

[node name="General" type="Node2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="General"]
texture = ExtResource("1_7dqjs")
hframes = 2

[node name="CenterMarker" type="Marker2D" parent="General"]
position = Vector2(0, 5)

[node name="Animator" type="AnimationPlayer" parent="General"]
libraries = {
"": SubResource("AnimationLibrary_ydhfc")
}
autoplay = "fly"

[node name="Components" type="Node2D" parent="."]

[node name="VelocityComponent" parent="Components" node_paths=PackedStringArray("actor") instance=ExtResource("3_51yha")]
actor = NodePath("../..")
speed = 150.0
acceleration = 400.0
friction = 500.0

[node name="StateMachine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("3_jr0lj")]
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_7yo7l")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource("5_fh3jp")

[editable path="StateMachine"]
